# proxy_teleop

./: CMakeLists.txt  README
model/: ground.mtl
model/cherry_picker/: picker_arm.mtl  picker_base.mtl  picker_bucket.mtl  picker_top_arm.mtl  picker_vehicle.mtl
model/iiwa14/: iiwa14.urdf  iiwa14_backup.urdf  world.urdf  world_backup.urdf
model/iiwa14/meshes/visual/: link_5.mtl
model/iiwa14/meshes/visual__/: link_0.mtl  link_4.mtl  link_5.mtl  link_6.mtl
model/iiwa14/meshes/visual_from _dae/: link_1.mtl  link_2.mtl  link_3.mtl  link_7.mtl
model/panda/: panda_arm.urdf  panda_arm_hand.urdf  world.urdf
model/power_line/: pole.mtl
model/power_line_v2/: pole.mtl
model/power_line_v3/: power_pole_v3.mtl
model/spot/: spot.urdf
src/: CMakeLists.txt  README  pybullet_kuka.py  redis_keys.h
src/control_testing/: controller_test.cpp
src/simulation_teleop/: haptic_controller.cpp  robot_controller.cpp  simviz.cpp
